--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "chrome-har-capturer": "^0.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
