--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "bootstrap": "^5.3.3",
     "chrome-har-capturer": "^0.14.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-json-view-lite": "^1.4.0",
     "react-redux": "^9.1.2"
