--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-json-view-lite": "^1.4.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "zustand": "^4.5.5",
+    "lodash": "^4.17.21"
   }
 }
